serving files statically

--- a/views/add-product.html
+++ b/views/add-product.html
@@ -6,84 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            font-family: sans-serif;
-        }
-
-        main {
-            padding: 1rem;
-        }
-
-        .main-header {
-            width: 100%;
-            height: 3.5rem;
-            background-color: #ffd000;
-            padding: 0.15rem;
-        }
-
-        .main-header__item-list {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        .main-header__item {
-            margin: 0 1rem;
-            padding: 0;
-        }
-
-        .main-header__item a {
-            text-decoration: none;
-            color: white;
-        }
-
-        .main-header__item a:hover,
-        .main-header__item a:active,
-        .main-header__item a.active {
-            color: #9460cf;
-        }
-
-        .product-form{
-            width: 30rem;
-            max-width: 90%;
-            margin:auto;
-        }
-
-        .form-control{
-            margin:1rem 0;
-        }
-
-        .form-control label,
-        .form-control input{
-            display: block;
-            width: 100%;
-        }
-
-        .form-control input{
-            border:1px solid #ffd000;
-            font:inherit;
-            border-radius: 2px;
-        }
-
-        button{
-            font:inherit;
-            border: 1px solid #9460cf;
-            color:#9460cf;
-            background: white;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        button:hover,
-        button:active{
-            background-color: #9460cf;
-            color:white;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
