--- a/views/shop.pug
+++ b/views/shop.pug
@@ -1,33 +1,22 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title #{docTitle}
-        link(rel="stylesheet", href="/css/main.css")
-        link(rel="stylesheet", href="/css/product.css")
-    body 
-        header.main-header
-            nav.main-header__nav
-                ul.main-header__item-list
-                    li.main-header__item
-                        a.active(href="/") Shop
-                    li.main-header__item
-                        a.active(href="/admin/add-product") Add Product 
-        main 
-            .grid
-                if prods
-                    each product in prods
-                        article.card.product-item
-                            header.card__header
-                                h1.product__title #{product.title}
-                            div.card__image
-                                img(src="", alt="alt")
-                            div.card__content
-                                h2.product__price $19.99
-                                p.product__description aasefewrf
-                            .card__actions
-                                button.btn Add to Cart
-                    else 
-                        h1 No product available
+extends layout/main-layout.pug
+
+block styles
+            link(rel="stylesheet", href="/css/product.css")
+
+block content 
+            main 
+                .grid
+                    if prods
+                        each product in prods
+                            article.card.product-item
+                                header.card__header
+                                    h1.product__title #{product.title}
+                                div.card__image
+                                    img(src="", alt="alt")
+                                div.card__content
+                                    h2.product__price $19.99
+                                    p.product__description aasefewrf
+                                .card__actions
+                                    button.btn Add to Cart
+                        else 
+                            h1 No product available
